# olx-finder

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  ai_client.py  ai_client_protocol.py  app.py  config.py  offer_comparator.py  pyproject.toml  requirements.txt  scraper.py  spec_extractor.py
.github/workflows/: ci.yml
olx_finder/: __main__.py  ai.py  ai_client.py  analyzer.py  cli.py  config.py  models.py  offer_comparator.py  prompts.py  scraper.py  spec_extractor.py
tests/: conftest.py  test_ai.py  test_analyzer.py  test_cli.py  test_config.py  test_parsing.py  test_scraper.py  test_session.py
